# MontyHallParadox

./: CMakeLists.txt  README.md
includes/: MontyHall.h
src/: MontyHall.cpp  main.cpp
